Popravljen header logo i radno vreme

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class="nav-toggle" id="nav-toggle">☰</div>
     
         <div class="header-logo">
-            <a href="index.html">
-                <img src="images/logo-sempermedic.jpg" alt="Semper Medic Logo" class="logo-header-img">
-            </a>
+          <a href="index.html">Semper Medic</a>
         </div>
     
         <nav class="nav-menu" id="nav-menu">
@@ -97,7 +95,11 @@
     <section id="lokacija" class="location-section">
         <div class="location-info">
           <div class="info-block">
-            <p><strong>Radno vreme:</strong><br>08:00h – 20:00h</p>
+            <p><strong>Radno vreme:</strong><br>
+              Ponedeljak – Petak: 09:00 – 17:00<br>
+              Subota: 09:00 – 14:00<br>
+              Nedelja: Ne radimo
+            </p>
           </div>
           <div class="info-block">
             <p><strong>Adresa:</strong><br>Strahinjića Bana 17<br>Užice, Srbija</p>
